# nomi

./: .env.example  AGENTS.md  GEMINI.md  README.md  SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  emedding_response.json  flutter_plan.md  media_context_vision.md  test.md  test.ts  test_gemini.rs
channel-rust/: .gitignore  Cargo.toml  Dockerfile  test_regex.rs  test_wa.rs
channel-rust/src/: main.rs
channel-rust/src/common/: format.rs  mod.rs  storage.rs
channel-rust/src/feature/: bridge.rs  mod.rs  telegram.rs  whatsapp.rs
gateway-rust/: Cargo.toml  Dockerfile  README.md  seed_simulation.sql  test_gemini.rs  test_gemini2.rs  test_regex.rs
gateway-rust/.sqlx/: query-00fed36d3055f6b4121eaa539499b5efee7ba0ce167a15b9c8dbebc9b8b2700d.json  query-022942ee72893db11d173855810ac77ce2643e771d3a1ed2edb70cc4aa81d8e3.json  query-025977ee12793d5426ce33ae4a41cfbf857ece0db40b9bb0f2de9cbc647aa2f2.json  query-039d428a4c994039e9f4c88f59e106ecf883705c8ed2fe00f12d0186edd592f8.json  query-073464da63dcff8345c9bebb04733b7f708a9027c4507215112964a5a035cdae.json  query-08167c49017bc64e00a585f0ba95401d3e638670148e7fb2e04923c5746e019b.json  query-085a8fac0770e2a73f63de9f635a4dd32e7095d9618ef44ed3568bbc04fa5a94.json  query-08dbf0248f00483a9b61f387a7be84b1351ad8a785dab9848bfe03a425db8c6f.json  query-0a662769a2e4b13c7542498f76fe6f04c1363b3eb3f7b91af4c8086e7fc2b706.json  query-0b95ace44d4f5fed721dafa1a81b13af506b7d5f409298c05c30f549806f3c9a.json  query-0e6203a225a33c50b1ae304900b209f713766e5f701eede73c035cfce86e4a44.json  query-0fa897fafc9999eeab92a56a4c7e3fa662029bcb88b54b4caf96dd5b04663ceb.json  query-108dd3dd06c9bb06090dc3e71307b1a5b4676a9aa7dc575a628c27094c85c2c4.json  query-13a5e44ba9d898408b6a546e8c6d790c10907dd51ac501018c94c434528617f4.json  query-15c86c6bd531de38d6c5c0841084c54dd2151d39d669a2b990fb5d5ce2876688.json  query-16151d2c30952e1e58174d21e181d52929fd0fa8759d4b54c92e3800806014b2.json  query-162fa80f19c3392461b2a08e39e59c602db7573316354065cfe95b197b4c355d.json  query-1660054c895fad41d8db7c70cc02b800c9966dd0df26fa902501d13732415c4a.json  query-167c0983827ccaa20cf9d9002234b8e730cc6b2b9a1b68e02b88c1943bc83173.json  query-17d22dc470fe690236fdd348e68335f1c05610ddff5bf099673df0e59619fe55.json  query-1b675e522bdbf0c2e41ea39f0fe2f1106784b415c200ebc119500eea5c0993da.json  query-1c6f89fe8243baa9fe75989e600be9a4e9cae394ce5e02060d5bdcd1e59606e0.json  query-1cbe5b2ea729169a600dc088780e8d9d74c1aa3841db1f0befc6a2a317114878.json  query-1de824726cd38a426ba85cb2be071dddd33944beaf75458c6121e5a1a1cda16b.json  query-2048b9d500c49fda74a0db69c7f02b262a960b91477e44dacf957544bd48261b.json  query-21c0a3bd9b84eea5a48c8896e4a49396c00d0aecac11b95de8ed8f55004f2357.json  query-21f296ca93eb3d7677b122f11f5f45cbb312c75c346e441ea7593bdfa8fe04f5.json  query-22af128406f4659890d0a13c221657cc897cc8fb881156dace95bdebc667a330.json  query-23d7b1c4072716f450561041e434936cb78f20823e2d3fc8b4e38ff6395609eb.json  query-2473a7eda698707d46f34a7ba52cac687ffada0992b143f6bed78edfdd71b6ca.json  query-2552b19819008d10d289324a3d8917bba8b7606aea5e065c50709ef48a6be89f.json  query-280e502ff919b351b45532e241d56ad45d2a82f7b887f74547265497cc1d8f3d.json  query-28cd645e221ea71a2e8208159691dc7b45b13a99de303cadc2312317735985e0.json  query-29387e82021a9fc7671d9b9c51a043ce25f6951e5f3d1653da799c7682586f8b.json  query-2b670ce047a7b7aa517e6e9486edd8bacf94c81be4511c527c573c0db9178120.json  query-2b852c19ef302f4cfb927480bf188bf056798afaba8482e3280c7c7e8f994274.json  query-2ca8834647d5f82456e6c084897a80524cdbe118fa3e04d140dc0ce8668059cc.json  query-2cf35f7a6992023ebbd0b9b38bb5ded79fb7289dab53d1868d47d65f792f2d91.json  query-2d93065aa1bc2d471d6a991015b58ace048ada948896854ebc7fbe9cf80b4e1e.json  query-2db00b2470f41a7ed13cdcfeb01f8c40d5feae78e87d68e706fe70735a8503df.json  (+234 more)
gateway-rust/docs/: SKILLS.md  internal_rpc.ts
gateway-rust/migrations/: 20260427000000_initial_schema.sql  20260504000000_hierarchical_memory.sql  20260505094900_add_bootstrap_to_soul_history.sql  20260506084126_add_user_id_to_messages.sql  20260507000000_hierarchical_memory.sql  20260507061008_add_conversation_id_to_knowledge_base.sql  20260508000000_soul_history.sql  20260509000000_channels.sql  20260510000000_users_table.sql  20260511000000_pairing_rooms.sql  20260512000000_add_user_id_to_channels.sql  20260513000000_auth_and_sessions.sql  20260514000000_chat_auth_tweaks.sql  20260515000000_drop_unused_session_tables.sql  20260516000000_optimize_members_lookup.sql  20260517000000_reminders.sql  20260517000001_token_tracking.sql  20260518000000_add_metadata_to_conversations.sql  20260519000000_channel_group.sql  20260519182846_token_usage_history.sql  20260520000000_money_tracking.sql  20260521000000_pending_media.sql  20260521000001_knowledge_base_token_tracking.sql  20260521000002_add_metadata_to_messages.sql  20260522000000_optimize_pending_media.sql  20260523000000_general_task_scheduler.sql  20260523000000_waitlist.sql  20260524000000_add_max_token_usage_to_conversations.sql  20260525000000_harden_reminders.sql  20260526000000_health_metrics.sql  20260527000000_edge_functions.sql  20260528000000_knowledge_edge_function.sql  20260529000000_self_reinforcement.sql  20260530000000_daf_staging.sql  20260531000000_daf_intents.sql  20260601000000_centralized_logging.sql  20260602000000_edge_function_env.sql  20260603000000_message_replies.sql  20260604000000_add_external_id_to_users.sql  20260605000000_dynamic_execution_boundaries.sql  (+3 more)
gateway-rust/src/: main.rs  prompts.rs  routes.rs  test_gemini.rs
gateway-rust/src/common/: api_response.rs  app_state.rs  format.rs  mod.rs  reminder.rs  splitter.rs  stock.rs  storage.rs
gateway-rust/src/feature/: admin.rs  diagnostics.rs  edge_functions.rs  friendship.rs  health_tracking.rs  mod.rs  money_tracking.rs  reminder.rs  waitlist.rs
gateway-rust/src/models/: mod.rs
gateway-rust/src/rag/: mod.rs  rag_model.rs  retrieval.rs
gateway-rust/src/services/: guardrail.rs  (+10 more)
gateway-rust/tests/: seed_simulation.rs
(+424 files in other folders)
