[package]
name = "channel-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio-stream = { version = "0.1.17", features = ["sync"] }
redis = { version = "0.29.1", features = ["tokio-rustls-comp"] }
axum = "0.8.1"
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0.102"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["cors"] }
wa-rs = "0.2.0"
wa-rs-sqlite-storage = "0.2.0"
wa-rs-tokio-transport = "0.2.0"
wa-rs-ureq-http = "0.2.0"
wa-rs-core = "0.2.0"
teloxide = { version = "0.17.0", features = ["macros"] }
# sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
regex = "1.12.3"
