[package]
name = "channel-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio-stream = { version = "0.1.17", features = ["sync"] }
redis = { version = "0.29.1", features = ["tokio-rustls-comp"] }
axum = "0.8.1"
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["cors"] }
wa-rs = "0.2.0"
wa-rs-sqlite-storage = "0.2.0"
rusqlite = { version = "0.32", features = ["bundled"] }
wa-rs-tokio-transport = "0.2.0"
wa-rs-ureq-http = "0.2.0"
wa-rs-core = "0.2.0"
teloxide = { version = "0.17.0", default-features = false, features = ["macros", "rustls",  "ctrlc_handler"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
regex = "1.12.3"
rust-s3 = {version = "0.37.2",default-features = false,features = ["tokio-rustls-tls"]}
mime_guess = "2.0.5"
image = "0.25.9"
webp = "0.3.1"
