[package]
name = "gateway-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = {version = "0.8.1",features = ["multipart"]}
futures = { version = "0.3.30" }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
gemini-rust = "1.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros"] }
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
log = "0.4.29"
error = "0.1.9"
url = "2.5.8"
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.13.3", features = ["json"] }
schemars = "1.2.1"
