[package]
name = "gateway-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio-stream = { version = "0.1.17", features = ["sync"] }
redis = { version = "0.29.1", features = ["tokio-rustls-comp"] }
anyhow = "1.0.102"
axum = {version = "0.8.1",features = ["multipart"]}
futures = { version = "0.3.30" }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
gemini-rust = "1.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
tokio = { version = "1.52.1", features = ["full", "sync", "time"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
log = "0.4.29"
validator = { version = "0.20.0", features = ["derive"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
schemars = "1.2.1"
dashmap = "6.1.0"
rand = "0.10.1"
jsonwebtoken = "9.3.0"
bcrypt = "0.17.0"
cookie = "0.18.0"
tower-cookies = "0.10.0"
